# beautiful-capi

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  InstallReadMe.txt  README.md  TODO  UseBCapi.cmake  appveyor.yml  installer.sh
examples/: CMakeLists.txt  example.cmake  generic_params.xml  hello_world.xml  swig_example.cmake
examples/api_include/: CMakeLists.txt
examples/api_include/client/: CMakeLists.txt  Main.cpp
examples/api_include/sharp_client/: CMakeLists.txt  Program.cs
examples/api_include/sharp_client/Properties/: AssemblyInfo.cs  Program.cs
examples/boost_shared_ptr/: BoostSharedPtr.cs  CMakeLists.txt  boost_shared_ptr_client.py
examples/boost_shared_ptr/client/: CMakeLists.txt  Main.cpp
examples/callback/: CMakeLists.txt
examples/callback/client/: CMakeLists.txt  Main.cpp
examples/callback/sharp_client/: CMakeLists.txt  Program.cs
examples/callback/sharp_client/Properties/: AssemblyInfo.cs
examples/circular_reference/: CMakeLists.txt  CircularReference.cs  circular_reference_client.py
examples/circular_reference/client/: CMakeLists.txt  Main.cpp
examples/circular_reference/sharp_client/: CMakeLists.txt  Program.cs
examples/clanguage/: CLanguage.cs  CMakeLists.txt  clanguage.py
examples/clanguage/client/: CMakeLists.txt  Main.c  Main.cpp
examples/class_wrap_name/: CMakeLists.txt
examples/class_wrap_name/client/: CMakeLists.txt  Main.cpp
examples/class_wrap_name/sharp_client/: CMakeLists.txt  Program.cs
examples/class_wrap_name/sharp_client/Properties/: AssemblyInfo.cs
examples/closed_api/: CMakeLists.txt
examples/closed_api/client/: CMakeLists.txt  Main.cpp
examples/closed_api/sharp_client/: CMakeLists.txt  Program.cs
examples/closed_api/sharp_client/Properties/: AssemblyInfo.cs
examples/copy_semantic/: CMakeLists.txt  copy_semantic_client.py
examples/copy_semantic/client/: CMakeLists.txt  Main.cpp
examples/copy_semantic/sharp_client/: CMakeLists.txt  Program.cs
examples/copy_semantic/sharp_client/Properties/: AssemblyInfo.cs
examples/custom_suffix/: CMakeLists.txt  CustomSuffix.cs  custom_suffix_client.py
examples/custom_suffix/client/: CMakeLists.txt  Main.cpp
examples/custom_suffix/sharp_client/: CMakeLists.txt  Program.cs
examples/custom_suffix/sharp_client/Properties/: AssemblyInfo.cs
examples/derived_from_abstract/: CMakeLists.txt
examples/derived_from_abstract/client/: CMakeLists.txt  Main.cpp
examples/derived_from_abstract/sharp_client/: CMakeLists.txt  Program.cs
examples/derived_from_abstract/sharp_client/Properties/: AssemblyInfo.cs
examples/down_cast/: CMakeLists.txt  DownCast.cs  down_cast_client.py
examples/down_cast/client/: CMakeLists.txt  Main.cpp
examples/down_cast/sharp_client/: CMakeLists.txt  Program.cs
examples/down_cast/sharp_client/Properties/: AssemblyInfo.cs
examples/doxygen_doc/: CMakeLists.txt
examples/doxygen_doc/client/: CMakeLists.txt  Main.cpp
examples/exception/: CMakeLists.txt
examples/exception/client/: CMakeLists.txt  Main.cpp
examples/external_class/: CMakeLists.txt
examples/external_class/client/: CMakeLists.txt  Main.cpp
examples/external_class/sharp_client/: CMakeLists.txt  Program.cs
examples/hello_world/: CMakeLists.txt  HelloWorldExample.cs  hello_world_client.py
examples/hello_world/client/: CMakeLists.txt  Main.cpp
examples/hello_world/sharp_client/: CMakeLists.txt  Program.cs
examples/implementation_code/: CMakeLists.txt
examples/implementation_code/client/: CMakeLists.txt  Main.cpp
examples/mapped_types/: CMakeLists.txt
examples/mapped_types/client/: CMakeLists.txt  Main.cpp
examples/mapped_types/sharp_client/: CMakeLists.txt  Program.cs
examples/mixed_semantic/: CMakeLists.txt
examples/mixed_semantic/client/: CMakeLists.txt  Main.cpp
examples/mixed_semantic/sharp_client/: CMakeLists.txt  Program.cs
examples/mixed_semantic2/: CMakeLists.txt
examples/mixed_semantic2/client/: CMakeLists.txt  Main.cpp
examples/mixed_semantic2/sharp_client/: CMakeLists.txt
examples/move_semantic/: CMakeLists.txt
examples/move_semantic/client/: CMakeLists.txt  Main.cpp
examples/object_parameter/: CMakeLists.txt  ObjectParameter.cs  object_parameter_.py
examples/object_parameter/client/: CMakeLists.txt  Main.cpp
examples/object_parameter/sharp_client/: CMakeLists.txt  Program.cs
examples/overload_suffix/: CMakeLists.txt
examples/overload_suffix/client/: CMakeLists.txt  Main.cpp
examples/overload_suffix/sharp_client/: CMakeLists.txt  Program.cs
examples/point_set/: CMakeLists.txt  PointSetExample.cs  point_set_client.py
examples/point_set/client/: CMakeLists.txt  Main.cpp
examples/raw_pointer_semantic/: CMakeLists.txt  RawPointerSemantic.cs  raw_pointer_semantic_client.py
examples/raw_pointer_semantic/client/: CMakeLists.txt  Main.cpp
examples/raw_pointer_semantic/sharp_client/: CMakeLists.txt  Program.cs
examples/ref_counted/: CMakeLists.txt
examples/ref_counted/client/: CMakeLists.txt  Main.cpp
examples/reference_counted/: CMakeLists.txt  ReferenceCounted.cs
examples/reference_counted/client/: CMakeLists.txt  Main.cpp
examples/reference_counted/sharp_client/: CMakeLists.txt  Program.cs
examples/return_value/: CMakeLists.txt
examples/return_value/client/: CMakeLists.txt  Main.cpp
examples/return_value/sharp_client/: CMakeLists.txt  Program.cs
examples/single_file/: CMakeLists.txt  SingleFile.cs  single_file_client.py
examples/single_file/client/: CMakeLists.txt  Main.cpp
examples/template/: CMakeLists.txt
examples/template/client/: CMakeLists.txt  Main.cpp
examples/template/sharp_client/: CMakeLists.txt  Program.cs
examples/unit_test/: CMakeLists.txt
examples/unit_test/client/: CMakeLists.txt  Main.cpp  StaticEqual.h
examples/virtual_interface/: CMakeLists.txt  VirtualInterface.cs  virtual_interface_client.py
examples/virtual_interface/client/: CMakeLists.txt  Main.cpp
examples/virtual_interface/sharp_client/: CMakeLists.txt  Program.cs
src/: Main.py  (+15 more)
tests/file_options/: CMakeLists.txt
tests/file_options/clients/: Main.cpp
(+567 files in other folders)
